force-app/main/default/objects/Billing_Line_Item__c/Billing_Line_Item__c.object-meta.xml
<CustomObject>
    <label>Billable Line Item</label>
    <nameField>
        <displayFormat>BL-{0000}</displayFormat>
        <label>Billable Line Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Billable Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>