force-app/main/default/objects/Billing_Line_Item__c/fields/Caregiver_Billing_Details__c.field-meta.xml
<CustomField>
    <fullName>Caregiver_Billing_Details__c</fullName>
    <label>Caregiver Billing Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>