force-app/main/default/objects/Billing_Line_Item__c/fields/Caregiver_Hourly__c.field-meta.xml
<CustomField>
    <fullName>Caregiver_Hourly__c</fullName>
    <label>Hourly</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Admin - $0.00</fullName>
            </value>
            <value>
                <fullName>CM Evening/Weekends - $70.00</fullName>
            </value>
            <value>
                <fullName>CM Holidays - $120.00</fullName>
            </value>
            <value>
                <fullName>CM Standard - $60.00</fullName>
            </value>
            <value>
                <fullName>Custom</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>