force-app/main/default/objects/Billing_Line_Item__c/fields/Client_PerVisit__c.field-meta.xml
<CustomField>
    <fullName>Client_PerVisit__c</fullName>
    <label>Per Visit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Custom</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>