force-app/main/default/objects/Billing_Line_Item__c/fields/Client_Rate__c.field-meta.xml
<CustomField>
    <fullName>Client_Rate__c</fullName>
    <label>Client Rate</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hourly</fullName>
            </value>
            <value>
                <fullName>Not Payable</fullName>
            </value>
            <value>
                <fullName>Per Visit</fullName>
                <isActive>false</isActive>
                <label>Per Visit</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>