force-app/main/default/objects/Billing_Line_Item__c/fields/Client_Rate_Custom_Value__c.field-meta.xml
<CustomField>
    <fullName>Client_Rate_Custom_Value__c</fullName>
    <label>Client Rate Custom Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>