force-app/main/default/objects/Billing_Line_Item__c/fields/Event_Duration__c.field-meta.xml
<CustomField>
    <fullName>Event_Duration__c</fullName>
    <formula>Invoice__r.Event_Duration_Hours__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Event Duration</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>