force-app/main/default/objects/Billing_Line_Item__c/fields/Expense_Amount_3__c.field-meta.xml
<CustomField>
    <fullName>Expense_Amount_3__c</fullName>
    <label>Expense Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>