force-app/main/default/objects/Billing_Line_Item__c/fields/Expense_Bill__c.field-meta.xml
<CustomField>
    <fullName>Expense_Bill__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Expense Bill</label>
    <type>Checkbox</type>
</CustomField>