force-app/main/default/objects/Billing_Line_Item__c/fields/Expense_Index__c.field-meta.xml
<CustomField>
    <fullName>Expense_Index__c</fullName>
    <label>Expense Index</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>