force-app/main/default/objects/Billing_Line_Item__c/fields/Expense_Pay__c.field-meta.xml
<CustomField>
    <fullName>Expense_Pay__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Expense Pay</label>
    <type>Checkbox</type>
</CustomField>