force-app/main/default/objects/Billing_Line_Item__c/fields/Mileage_Amount_4__c.field-meta.xml
<CustomField>
    <fullName>Mileage_Amount_4__c</fullName>
    <label>Mileage Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>