force-app/main/default/objects/Billing_Line_Item__c/fields/Mileage_Bill__c.field-meta.xml
<CustomField>
    <fullName>Mileage_Bill__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mileage Bill</label>
    <type>Checkbox</type>
</CustomField>