force-app/main/default/objects/Billing_Line_Item__c/fields/Mileage_Description_4__c.field-meta.xml
<CustomField>
    <fullName>Mileage_Description_4__c</fullName>
    <label>Mileage Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>