force-app/main/default/objects/Billing_Line_Item__c/fields/Mileage_Pay__c.field-meta.xml
<CustomField>
    <fullName>Mileage_Pay__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mileage Pay</label>
    <type>Checkbox</type>
</CustomField>