force-app/main/default/objects/Billing_Line_Item__c/fields/QB_Line_Item_ID__c.field-meta.xml
<CustomField>
    <fullName>QB_Line_Item_ID__c</fullName>
    <externalId>true</externalId>
    <label>QB Line Item ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>