force-app/main/default/objects/Billing_Line_Item__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Client Billable</fullName>
            </value>
            <value>
                <fullName>Caregiver Billable</fullName>
                <label>Care Manager Pay</label>
            </value>
            <value>
                <fullName>Mileage</fullName>
            </value>
            <value>
                <fullName>Expense/Credit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>