force-app/main/default/objects/Billing_Line_Item__c/recordTypes/Caregiver_Billable.recordType-meta.xml
<RecordType>
    <fullName>Caregiver_Billable</fullName>
    <active>false</active>
    <label>Caregiver Billable</label>
</RecordType>