force-app/main/default/objects/Billing_Line_Item__c/recordTypes/Client_Billable.recordType-meta.xml
<RecordType>
    <fullName>Client_Billable</fullName>
    <active>true</active>
    <label>Client Billable</label>
</RecordType>