force-app/main/default/objects/Billing_Line_Item__c/recordTypes/Expense_Credit.recordType-meta.xml
<RecordType>
    <fullName>Expense_Credit</fullName>
    <active>false</active>
    <label>Expense/Credit</label>
</RecordType>