force-app/main/default/objects/Billing_Line_Item__c/recordTypes/Mileage.recordType-meta.xml
<RecordType>
    <fullName>Mileage</fullName>
    <active>false</active>
    <label>Mileage</label>
</RecordType>