force-app/main/default/objects/Billing_Line_Item__c/validationRules/Lock_BillableLineItems_Once_Synced_to_QB.validationRule-meta.xml
<ValidationRule>
    <fullName>Lock_BillableLineItems_Once_Synced_to_QB</fullName>
    <active>false</active>
    <errorConditionFormula>Invoice__r.Is_Synced__c = True</errorConditionFormula>
    <errorMessage>Billable Line Item cannot be edited once the related Billable record is synced to QuickBooks.</errorMessage>
</ValidationRule>